same way.  What this calculator aims to do is to work in every condition, be standards compliant, and 
when the code is searched through it is very easy to read.  Not only that but it is heavily commented 
to explain the different functions and features from within.  The calculator should work on all
JavaScript enabled, CSS 2.0 compatible web browsers.  All dates are in mm/dd/yyyy format.

Whats new in 1.2.5? (02/03/2008)
Documentation changes:
1.	Changed version numbers in documentation.
2.	Reindexed the entire search documentation to allow changes for the new version to take effect.
3.	Added page numbers to PDF version for easy navigation if document is printed.
4.	Added Table of Contents to the Table of Contents for easier navigation in the PDF.

Javascript Changes (core functionality of the calculator):
1.	Fixed bug in changeSign() function of resources\js\math_functions.js.  When user would change
	the sign by pressing the +/- button on this equation: -(45+3)+(2+3) then rather than changing
	the sign of the whole equation it would change it to: 45+3)+(2+3 and now it has errors.


Whats new in 1.2.4? (01/21/2008)
Created a completely custom written help system designed by me so the help source can be 
released.  I had used RoboHelp Office at a previous company I worked at because I could have
a copy of it and since that was a $1000 closed source program it didn't make much sense to 
release its content under any kind of open source license.  Now I've designed my own which I
will turn into a sourceforge project so other open source users can benefit from it as well.

*Edit 01/31/2008 I have included a PDF version of the documentation allong with an ODT file
which was created by OpenOffice.org.  1.2.4 is the first SourceForge release of the calculator.

Whats new in 1.2.3? (01/14/2008)
HTML/CSS Changes:
1.	Organized the menu into a table so the branding/version can always be at the right.

Javascript Changes (core functionality of the calculator):