@@ -63,7 +63,7 @@ body
 <fieldset style="width: 250px; cursor: default"><legend>
 <font size=4 color=black><img src="calc_resources/imgs/favicon.ico" alt="Calc Icon">About Calculator:</font></legend><br>
 <blockquote dir=ltr style="margin-left: 10px; margin-top: 0px; margin-bottom: 0px; margin-right: 0px"><b>Version</b> 
-v1.2.5 <b>By</b> Sam Gleske<br><b>Created</b> November 28, 2005<br><b>Last Updated</b> January 21, 2008</blockquote></div></fieldset>
+v1.2.6 <b>By</b> Sam Gleske<br><b>Created</b> November 28, 2005<br><b>Last Updated</b> January 21, 2008</blockquote></div></fieldset>
 <hr style="position:absolute;left:5px;width:250px;"><br>
 </div>
 <div style="width:250px;height:100px;overflow:auto;background-color:white;font-size:16px;">
