@@ -9,7 +9,7 @@
 </head>
 <body>
 	<h1 style="font-weight: normal">About</h1>
-	<p><b>What is the Scientific Calculator v1.2.5?</b></p>
+	<p><b>What is the Scientific Calculator v1.2.6?</b></p>
 	
 	<p>It is an advanced calculator that uses JavaScript (not Java) to compute advanced math functions.Type in almost any equation and my calculator can handle it!</p>
 	
