@@ -9,7 +9,7 @@
 </head>
 <body>
 	<h1 style="font-weight: normal">Compatible Browsers</h1>
-	<p>Scientific Calculator v1.2.5 is compatible with the following web browsers on all platforms:</p>
+	<p>Scientific Calculator v1.2.6 is compatible with the following web browsers on all platforms:</p>
 	<ul>
 		<li>Internet Explorer 6.0+</li>
 		<li>Firefox 1.0+</li>
@@ -60,7 +60,7 @@
 		</li>
 	</ul>
 	<p><b>Test results</b></p>
-	<p>Scientific Calculator v1.2.5 is compatible with the following web browsers on all platforms:</p>
+	<p>Scientific Calculator v1.2.6 is compatible with the following web browsers on all platforms:</p>
 	<ul>
 		<li>Internet Explorer 6.0+</li>
 		<li>Firefox 1.0+</li>
