@@ -10,7 +10,7 @@
 <body>
 	<h1 style="font-weight: normal">Welcome</h1>
 	
-	<p><b>Welcome</b> to the <span style="color: #666">Scientific Calculator v1.2.5</span> Help Database.  Here you will find extensive knowledge and expertise with the function of this calculator, what different buttons do, examples in computing equations, as well as descriptions of menus and their functions.</p>
+	<p><b>Welcome</b> to the <span style="color: #666">Scientific Calculator v1.2.6</span> Help Database.  Here you will find extensive knowledge and expertise with the function of this calculator, what different buttons do, examples in computing equations, as well as descriptions of menus and their functions.</p>
 
 	<p>I hope this will be of great help to you and that you find many uses for my calculator.</p>
 	
